--- a/AdventOfCode_2021/AdventOfCode_2021/AdventOfCode_2021.fsproj
+++ b/AdventOfCode_2021/AdventOfCode_2021/AdventOfCode_2021.fsproj
@@ -10,6 +10,7 @@
     <ItemGroup>
         <Compile Include="Shared.fs" />
         <Compile Include="Day1.fs" />
+        <Compile Include="Day2.fs" />
     </ItemGroup>
 
     <ItemGroup>
