--- a/AdventOfCode_2021/AdventOfCode_2021/AdventOfCode_2021.fsproj
+++ b/AdventOfCode_2021/AdventOfCode_2021/AdventOfCode_2021.fsproj
@@ -11,6 +11,7 @@
         <Compile Include="Shared.fs" />
         <Compile Include="Day1.fs" />
         <Compile Include="Day2.fs" />
+        <None Include="Day3.fsx" />
     </ItemGroup>
 
     <ItemGroup>
